--- a/django/ecommerce/store/templates/store/cart.html
+++ b/django/ecommerce/store/templates/store/cart.html
@@ -37,9 +37,9 @@
             <div style="flex:1">
                 <p class="quantity">{{item.quantity}}</p>
                 <div class="quantity">
-                    <img data-product = {{item.product.id}} data-action = "add" class="chg-quantity" src="{% static  'images/up.png' %}">
+                    <img data-product = "{{item.product.id}}" data-action = "add" class="chg-quantity" src="{% static  'images/up.png' %}">
             
-                    <img data-product = {{item.product.id}} data-action = "remove" class="chg-quantity" src="{% static  'images/down.png' %}">
+                    <img data-product = "{{item.product.id}}" data-action = "remove" class="chg-quantity" src="{% static  'images/down.png' %}">
                 </div>
             </div>
             <div style="flex:1"><p>${{item.get_total}}</p></div>
